--- a/exercicios/ex007.html
+++ b/exercicios/ex007.html
@@ -39,7 +39,7 @@
         function somar() {
 
             var tn1 = window.document.getElementById('txtn1')
-            var tn2 = window.document.querySelector('input#txtn2')// msm funçao do a cima porem é usado # ao inves do 'ID'
+            var tn2 = window.document.querySelector('input#txtn2')// msm funçao do a cima porem é usado # ao inves do ' BY ID'
             var res = window.document.getElementById('res')
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
