--- a/exercicios/ex002.html
+++ b/exercicios/ex002.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
+    <link rel="shortcut icon" href="Graphics-Vibe-Developer-Javascript.ico" type="image/x-icon">
     <style>
         body {
             background-color: aqua;
@@ -22,7 +23,7 @@
     <script>
     
         var nome = window.prompt('qual seu nome?') // vai perguntar o nome
-        window.alert('prazer em te conhecer, ' + nome +'!') // concatenaçao
+        window.alert('prazer em te conhecer, ' + nome + '!') // concatenaçao
 
        
     </script>
